--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>Introduction to Version Control - Pre-Workshop Assignment</title>
+<title>Introduction to Version Control - About The Workshop</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -23,22 +23,22 @@ ul.task-list li input[type="checkbox"] {
 </style>
 
 
-<script src="../site_libs/quarto-nav/quarto-nav.js"></script>
-<script src="../site_libs/quarto-nav/headroom.min.js"></script>
-<script src="../site_libs/clipboard/clipboard.min.js"></script>
-<script src="../site_libs/quarto-search/autocomplete.umd.js"></script>
-<script src="../site_libs/quarto-search/fuse.min.js"></script>
-<script src="../site_libs/quarto-search/quarto-search.js"></script>
-<meta name="quarto:offset" content="../">
-<script src="../site_libs/quarto-html/quarto.js"></script>
-<script src="../site_libs/quarto-html/popper.min.js"></script>
-<script src="../site_libs/quarto-html/tippy.umd.min.js"></script>
-<script src="../site_libs/quarto-html/anchor.min.js"></script>
-<link href="../site_libs/quarto-html/tippy.css" rel="stylesheet">
-<link href="../site_libs/quarto-html/quarto-syntax-highlighting.css" rel="stylesheet" id="quarto-text-highlighting-styles">
-<script src="../site_libs/bootstrap/bootstrap.min.js"></script>
-<link href="../site_libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
-<link href="../site_libs/bootstrap/bootstrap.min.css" rel="stylesheet" id="quarto-bootstrap" data-mode="light">
+<script src="site_libs/quarto-nav/quarto-nav.js"></script>
+<script src="site_libs/quarto-nav/headroom.min.js"></script>
+<script src="site_libs/clipboard/clipboard.min.js"></script>
+<script src="site_libs/quarto-search/autocomplete.umd.js"></script>
+<script src="site_libs/quarto-search/fuse.min.js"></script>
+<script src="site_libs/quarto-search/quarto-search.js"></script>
+<meta name="quarto:offset" content="./">
+<script src="site_libs/quarto-html/quarto.js"></script>
+<script src="site_libs/quarto-html/popper.min.js"></script>
+<script src="site_libs/quarto-html/tippy.umd.min.js"></script>
+<script src="site_libs/quarto-html/anchor.min.js"></script>
+<link href="site_libs/quarto-html/tippy.css" rel="stylesheet">
+<link href="site_libs/quarto-html/quarto-syntax-highlighting.css" rel="stylesheet" id="quarto-text-highlighting-styles">
+<script src="site_libs/bootstrap/bootstrap.min.js"></script>
+<link href="site_libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
+<link href="site_libs/bootstrap/bootstrap.min.css" rel="stylesheet" id="quarto-bootstrap" data-mode="light">
 <script id="quarto-search-options" type="application/json">{
   "location": "navbar",
   "copy-button": false,
@@ -70,7 +70,7 @@ ul.task-list li input[type="checkbox"] {
     <nav class="navbar navbar-expand-lg navbar-dark ">
       <div class="navbar-container container-fluid">
       <div class="navbar-brand-container">
-    <a class="navbar-brand" href="../index.html">
+    <a class="navbar-brand" href="./index.html">
     <span class="navbar-title">Introduction to Version Control</span>
     </a>
   </div>
@@ -81,7 +81,7 @@ ul.task-list li input[type="checkbox"] {
           <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav navbar-nav-scroll me-auto">
   <li class="nav-item">
-    <a class="nav-link" href="../index.html" rel="" target="">
+    <a class="nav-link active" href="./index.html" rel="" target="" aria-current="page">
  <span class="menu-text">About The Workshop</span></a>
   </li>  
   <li class="nav-item dropdown ">
@@ -90,11 +90,11 @@ ul.task-list li input[type="checkbox"] {
     </a>
     <ul class="dropdown-menu" aria-labelledby="nav-menu-pre-workshop-materials">    
         <li>
-    <a class="dropdown-item" href="../pre-workshop/software-install.html" rel="" target="">
+    <a class="dropdown-item" href="./pre-workshop/software-install.html" rel="" target="">
  <span class="dropdown-text">Installion Instructions and Set-Up</span></a>
   </li>  
         <li>
-    <a class="dropdown-item" href="../pre-workshop/assignment.html" rel="" target="">
+    <a class="dropdown-item" href="./pre-workshop/assignment.html" rel="" target="">
  <span class="dropdown-text">Pre-Workshop Assignment</span></a>
   </li>  
     </ul>
@@ -110,7 +110,7 @@ ul.task-list li input[type="checkbox"] {
       <button type="button" class="quarto-btn-toggle btn" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar,#quarto-sidebar-glass" aria-controls="quarto-sidebar" aria-expanded="false" aria-label="Toggle sidebar navigation" onclick="if (window.quartoToggleHeadroom) { window.quartoToggleHeadroom(); }">
         <i class="bi bi-layout-text-sidebar-reverse"></i>
       </button>
-      <nav class="quarto-page-breadcrumbs" aria-label="breadcrumb"><ol class="breadcrumb"><li class="breadcrumb-item">Pre-Workshop Assignment</li></ol></nav>
+      <nav class="quarto-page-breadcrumbs" aria-label="breadcrumb"><ol class="breadcrumb"><li class="breadcrumb-item">About The Workshop</li></ol></nav>
       <a class="flex-grow-1" role="button" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar,#quarto-sidebar-glass" aria-controls="quarto-sidebar" aria-expanded="false" aria-label="Toggle sidebar navigation" onclick="if (window.quartoToggleHeadroom) { window.quartoToggleHeadroom(); }">      
       </a>
     </div>
@@ -133,7 +133,7 @@ ul.task-list li input[type="checkbox"] {
       <ul id="quarto-sidebar-section-1" class="collapse list-unstyled sidebar-section depth1 show">  
           <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="../course-outline.html" class="sidebar-item-text sidebar-link">
+  <a href="./course-outline.html" class="sidebar-item-text sidebar-link">
  <span class="menu-text">Course Outline</span></a>
   </div>
 </li>
@@ -150,25 +150,25 @@ ul.task-list li input[type="checkbox"] {
       <ul id="quarto-sidebar-section-2" class="collapse list-unstyled sidebar-section depth1 show">  
           <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="../01-what-is-vc.html" class="sidebar-item-text sidebar-link">
+  <a href="./01-what-is-vc.html" class="sidebar-item-text sidebar-link">
  <span class="menu-text">1. What is Version Control</span></a>
   </div>
 </li>
           <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="../02-working-local.html" class="sidebar-item-text sidebar-link">
+  <a href="./02-working-local.html" class="sidebar-item-text sidebar-link">
  <span class="menu-text">2. Working Locally with Git</span></a>
   </div>
 </li>
           <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="../03-remote-hosting.html" class="sidebar-item-text sidebar-link">
+  <a href="./03-remote-hosting.html" class="sidebar-item-text sidebar-link">
  <span class="menu-text">3. Remote Code Hosting and GitHub</span></a>
   </div>
 </li>
           <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="../04-bcgov-org.html" class="sidebar-item-text sidebar-link">
+  <a href="./04-bcgov-org.html" class="sidebar-item-text sidebar-link">
  <span class="menu-text">4. BCGOV GitHub Organization</span></a>
   </div>
 </li>
@@ -184,7 +184,14 @@ ul.task-list li input[type="checkbox"] {
     <h2 id="toc-title">On this page</h2>
    
   <ul>
-  <li><a href="#pre-workshop-assignment" id="toc-pre-workshop-assignment" class="nav-link active" data-scroll-target="#pre-workshop-assignment">Pre-workshop Assignment</a></li>
+  <li><a href="#introduction-to-version-control-with-git-and-github" id="toc-introduction-to-version-control-with-git-and-github" class="nav-link active" data-scroll-target="#introduction-to-version-control-with-git-and-github">Introduction To Version Control With Git and GitHub</a></li>
+  <li><a href="#learning-outcomes" id="toc-learning-outcomes" class="nav-link" data-scroll-target="#learning-outcomes">Learning Outcomes</a></li>
+  <li><a href="#who-should-take-this-course" id="toc-who-should-take-this-course" class="nav-link" data-scroll-target="#who-should-take-this-course">Who should take this course?</a></li>
+  <li><a href="#workshop-schedule" id="toc-workshop-schedule" class="nav-link" data-scroll-target="#workshop-schedule">Workshop Schedule</a>
+  <ul class="collapse">
+  <li><a href="#daily-schedule-to-be-finalized" id="toc-daily-schedule-to-be-finalized" class="nav-link" data-scroll-target="#daily-schedule-to-be-finalized">Daily Schedule (<strong>to be finalized</strong>)</a></li>
+  <li><a href="#pre-course-work" id="toc-pre-course-work" class="nav-link" data-scroll-target="#pre-course-work">Pre-Course Work</a></li>
+  </ul></li>
   </ul>
 </nav>
     </div>
@@ -193,7 +200,7 @@ ul.task-list li input[type="checkbox"] {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Pre-Workshop Assignment</h1>
+<h1 class="title">About The Workshop</h1>
 </div>
 
 
@@ -208,21 +215,84 @@ ul.task-list li input[type="checkbox"] {
 
 </header>
 
-<section id="pre-workshop-assignment" class="level2">
-<h2 class="anchored" data-anchor-id="pre-workshop-assignment">Pre-workshop Assignment</h2>
-<p>To make the most of our time together on the day of the workshop, we would like you to show up ready-to-go with the proper software installed and configured correctly on your local machine. After working through the installation instructions, please the following in a single Word or PDF document.</p>
-<section id="a-screen-shot-of-your-git-configurations" class="level4">
-<h4 class="anchored" data-anchor-id="a-screen-shot-of-your-git-configurations">1. A screen shot of your git configurations</h4>
-<p>When we use Git on a new computer for the first time, we need to configure a few things. We’ll talk a little more about this in the workshop.</p>
-<p>Open the application Git Bash on your local computer and enter the following commands at the command prompt. The command prompt will likely be a combination of your name, computer number and a filepath and ends with <code>$</code> The email address used should be the same as the one used when setting up your GitHub account.</p>
-<pre><code>$ git config --global user.name "Your Name in Quotes"
-$ git config --global user.email "youremail@gov.bc.ca"</code></pre>
-<p>Then enter the following and take a screen shot of the command-line output.</p>
-<pre><code>$ git config –list</code></pre>
+<section id="introduction-to-version-control-with-git-and-github" class="level2">
+<h2 class="anchored" data-anchor-id="introduction-to-version-control-with-git-and-github">Introduction To Version Control With Git and GitHub</h2>
+<p>This is a 1/2 day workshop introducing participants to version control using git and the popular code hosting platform, GitHub.</p>
+<p>The goal of this workshop is to teach data professionals how to harness the power of version control by giving attendees a foundation in the fundamentals of version control with <a href="https://git-scm.com">git</a>.</p>
+<p>GitHub is a widely-used platform for hosting and sharing code repositories, facilitating seamless collaboration among developers. Git, on the other hand, is a popular version control system that enables you to track changes in your code, collaborate with team members, and maintain a history of your project’s development.</p>
 </section>
-<section id="your-github-handle." class="level4">
-<h4 class="anchored" data-anchor-id="your-github-handle.">2. Your GitHub handle.</h4>
-<p>You can see this when you sign in to GitHub and click on your avatar at the top right. Your GitHub handle is in bold font above your name.</p>
+<section id="learning-outcomes" class="level2">
+<h2 class="anchored" data-anchor-id="learning-outcomes">Learning Outcomes</h2>
+<p>By the end of this course, you will have gained a fundamental understanding of version control, enabling you to:</p>
+<ul>
+<li>Set up a GitHub account and install the software git (pre-workshop)</li>
+<li>Understand the value-add of using version control to manage software and code-based data science projects</li>
+<li>Understand the basics of how automated version control systems work</li>
+<li>Use git, popular command-line version control software, to track local file changes</li>
+<li>What are remote hosting platforms and why do we use them?</li>
+<li>Connect to GitHub, create a remote repository and push local changes to GitHub</li>
+<li>Be familiar with the BC Gov Github Organization which has guidelines and requirements for hosting government developed open source repositories.</li>
+</ul>
+<p>The workshop content will follow best practices for version control such as writing descriptive commit messages, including a .gitignore file and tracking relevent project files.</p>
+</section>
+<section id="who-should-take-this-course" class="level2">
+<h2 class="anchored" data-anchor-id="who-should-take-this-course">Who should take this course?</h2>
+<ul>
+<li>Anyone looking to solidify their foundational understanding of version control</li>
+<li>Anyone keen to learn what git or GitHub is (<strong>no prior experience necessary!</strong>)</li>
+<li>Anyone wondering how version control can be used to manage and collaborate on software and code-based data science projects</li>
+</ul>
+</section>
+<section id="workshop-schedule" class="level2">
+<h2 class="anchored" data-anchor-id="workshop-schedule">Workshop Schedule</h2>
+<section id="daily-schedule-to-be-finalized" class="level3">
+<h3 class="anchored" data-anchor-id="daily-schedule-to-be-finalized">Daily Schedule (<strong>to be finalized</strong>)</h3>
+<table class="table">
+<colgroup>
+<col style="width: 68%">
+<col style="width: 17%">
+<col style="width: 14%">
+</colgroup>
+<thead>
+<tr class="header">
+<th>Activity</th>
+<th>Start Time</th>
+<th>End Time</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td><strong>Session 1. What is version control?</strong></td>
+<td>8:45</td>
+<td>9:15</td>
+</tr>
+<tr class="even">
+<td><strong>Session 2. Working locally with git</strong></td>
+<td>9:15</td>
+<td>10:30</td>
+</tr>
+<tr class="odd">
+<td>BREAK ☕</td>
+<td>10:30</td>
+<td>10:45</td>
+</tr>
+<tr class="even">
+<td><strong>Session 3. Working remotely with GitHub</strong></td>
+<td>10:45</td>
+<td>11:30</td>
+</tr>
+<tr class="odd">
+<td><strong>Session 4. The BC Gov GitHub Organization</strong></td>
+<td>11:30</td>
+<td>12:15</td>
+</tr>
+</tbody>
+</table>
+</section>
+<section id="pre-course-work" class="level3">
+<h3 class="anchored" data-anchor-id="pre-course-work">Pre-Course Work</h3>
+<p><strong>Important!</strong></p>
+<p>Before the course starts, we ask that all attendees install git and GitBash and have a basic text editor such as Wordpad, Notepad++, or SublimeText. Instructions for how to install these tools are found in the <a href="">Introduction to git Section</a>. If anyone is having troubles getting the software up and running, please contact us <strong>before</strong> the course starts so that we can hit the ground running during the workshop.</p>
 
 
 </section>
